--- a/part1/src/index.css
+++ b/part1/src/index.css
@@ -2,10 +2,13 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  width: 100%;
+  height: 100%;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
+  size: 100%;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,21 +16,43 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+#root {
+  width: 100%;
+  height: 100%;
 }
-a:hover {
-  color: #535bf2;
+
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.Center {
+  align-self: center;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  width: 100%
+}
+
+.content {
+  overflow-y: auto;
+  max-height: calc(100vh - 100px);
 }
 
 body {
   margin: 0;
   display: flex;
+  justify-content: center;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 h1 {
@@ -35,23 +60,55 @@ h1 {
   line-height: 1.1;
 }
 
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
-  font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #000000;
   cursor: pointer;
   transition: border-color 0.25s;
+  width: 22%;
 }
+
 button:hover {
-  border-color: #646cff;
+  border-color: #ff0000;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+.header {
+  margin: auto;
+  padding: 30px;
+  text-align: center;
+  background: rgba(0, 0, 0, 0);
+}
+
+.header h1 {
+  font-size: 50px;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: right;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.topnav a:hover {
+  color: #ff6a00;
 }
 
 @media (prefers-color-scheme: light) {
@@ -59,10 +116,23 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
