--- a/part1/src/index.css
+++ b/part1/src/index.css
@@ -2,10 +2,9 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  /*
   width: 100%;
   height: 100%;
-*/
+
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
@@ -16,11 +15,11 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-/*
+
 #root {
   width: 100%;
   height: 100%;
-}*/
+}
 
 
 .row:after {
@@ -143,6 +142,7 @@ body {
   background-color: #868686;
   flex-wrap: wrap;
   flex-direction: column;
+  width:100%;
 }
 
 .profile-image {
@@ -157,15 +157,14 @@ body {
   width: 100%;
   height: auto;
   display: block;
+  right:50%;
 }
 
 .profile-content {
   flex-grow: 1;
   color:#000000;
   width:600px;
-  margin-left: 300px;
-  margin-right:700px;
-  margin-bottom: 200px;
+  margin-bottom: 150px;
 }
 
 .flex-item{
