--- a/part1/src/index.css
+++ b/part1/src/index.css
@@ -28,21 +28,47 @@
   clear: both;
 }
 
-.Center {
-  align-self: center;
+.skills {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #321141;
+}
+
+.skill-container {
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-top:100px;
+  margin-bottom:100px;
+
+  width: 30%;
+  border: 1px solid #ffffff;
+  padding:10px;
+}
+
+.skills ul {
+  display: flex;
+  list-style: disc;
+  line-height: 27px;
+  flex-direction: column;
+  justify-content: center;
+  gap: 0rem;
 }
 
 .container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: start;
   justify-content: center;
-  min-height: 100vh;
-  width: 100%
+  width: auto;
+  margin-right: 50px;
 }
 
 .content {
   max-height: calc(100vh - 100px);
+  flex:1;
 }
 
 body {
@@ -59,6 +85,12 @@ h1 {
   line-height: 1.1;
 }
 
+h3 {
+  font-size: 1.6em;
+  line-height: 1.1;
+  text-align: center;
+}
+
 
 button {
   border-radius: 8px;
@@ -70,6 +102,7 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
   width: 22%;
+  margin-bottom: 50px;
 }
 
 button:hover {
@@ -110,6 +143,15 @@ button:focus-visible {
   color: #ff6a00;
 }
 
+.footer {
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #000000;
+  color: white;
+  text-align: center;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
@@ -139,42 +181,39 @@ body {
 .profile {
   display: flex;
   align-items: center;
-  background-color: #868686;
+  background-color: #ffffff;
   flex-wrap: wrap;
-  flex-direction: column;
-  width:100%;
+  flex-direction: row;
+  width: 100%;
 }
 
 .profile-image {
   border-radius: 50%;
   overflow: hidden;
-  width: 200px; 
-  height: 200px; 
-  margin-right: 20px;
+  width: 400px;
+  height: 400px;
+  margin-left: 200px;
 }
 
 .profile-image img {
-  width: 100%;
+  width: 105%;
   height: auto;
   display: block;
-  right:50%;
+  right: 50%;
 }
 
 .profile-content {
-  flex-grow: 1;
-  color:#000000;
-  width:600px;
+  color: #000000;
+  width: 600px;
   margin-bottom: 150px;
+  margin-left: 300px;
 }
 
-.flex-item{
-  word-wrap: break-word;
-  overflow-wrap: break-word;
-}
+
 
 .profile-content h2 {
   margin-top: 100px;
-  color:#000000;
+  color: #000000;
 }
 
 .profile-content a {
@@ -197,4 +236,82 @@ body {
     margin-bottom: 20px;
     margin-right: 0;
   }
+}
+
+.contactContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 800px;
+  width: 100%;
+}
+
+ul {
+  display: flex;
+  list-style: none;
+  gap: 2.5rem;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.item a {
+  text-decoration: none;
+  width: 2.4rem;
+  height: 2.4rem;
+  background-color: #f0f9fe;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+}
+
+.item a::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  scale: 1 1;
+  background: var(--item-bg-color);
+  transition: scale 0.5s ease;
+  z-index: 0;
+}
+
+.item:hover a::before {
+  height: 100%;
+}
+
+.icon {
+  font-size: 1.5rem;
+  color: hsl(203, 92%, 8%);
+  transition: 0.5s ease;
+  z-index: 2;
+}
+
+.item a:hover .icon {
+  color: #fff;
+  transform: rotateY(360deg);
+}
+
+.item:nth-child(1):hover a {
+  --item-bg-color: linear-gradient(to bottom right, #f9ce34, #ee2a7b, #6228d7);
+  background: var(--item-bg-color);
+}
+
+.item:nth-child(2):hover a {
+  --item-bg-color: #0077b5;
+  background: var(--item-bg-color);
+}
+
+.item:nth-child(3):hover a {
+  --item-bg-color: #ff0000;
+  background: var(--item-bg-color);
+}
+
+.item:nth-child(4):hover a {
+  --item-bg-color: #000;
+  background: var(--item-bg-color);
 }
