--- a/part1/src/index.css
+++ b/part1/src/index.css
@@ -40,12 +40,12 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  margin-top:100px;
-  margin-bottom:100px;
+  margin-top: 100px;
+  margin-bottom: 100px;
 
   width: 30%;
   border: 1px solid #ffffff;
-  padding:10px;
+  padding: 10px;
 }
 
 .skills ul {
@@ -68,7 +68,7 @@
 
 .content {
   max-height: calc(100vh - 100px);
-  flex:1;
+  flex: 1;
 }
 
 body {
@@ -89,6 +89,7 @@ h3 {
   font-size: 1.6em;
   line-height: 1.1;
   text-align: center;
+  margin-left: 20px;
 }
 
 
@@ -106,7 +107,7 @@ button {
 }
 
 button:hover {
-  border-color: #ff0000;
+  border-color: #585858;
 }
 
 button:focus,
@@ -115,19 +116,34 @@ button:focus-visible {
 }
 
 .header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   margin: auto;
   padding: 30px;
   text-align: center;
-  background: rgba(0, 0, 0, 0);
+  background-image: url("/frontview.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
 }
 
 .header h1 {
   font-size: 50px;
 }
 
+.header p {
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: large;
+}
+
 .topnav {
   overflow: hidden;
-  background-color: #333;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 999;
 }
 
 .topnav a {
@@ -242,7 +258,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 800px;
+  height: 600px;
   width: 100%;
 }
 
